# Ars

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  secrets.toml.example
.claude/commands/: ci-check.md  generate-codedesign.md
.github/scripts/: docker-build.sh
.github/workflows/: build-and-deploy.yml  ci.yml  deploy-web.yml  docker-publish.yml  pages.yml  release.yml
ars-editor/: index.html  package-lock.json  package.json  vite.config.ts
ars-editor/src/: App.tsx  AppLayout.tsx  index.css
ars-editor/src-tauri/: .env.example  .gitignore  Cargo.toml
ars-editor/src-tauri/src/: app_state.rs  auth.rs  collab.rs  dynamo.rs  dynamo_repo.rs  git_module_ops.rs  git_ops.rs  lib.rs  redis_client.rs  redis_repo.rs  surreal_repo.rs  surrealdb_client.rs  web_server.rs
ars-editor/src-tauri/src/models/: mod.rs
ars-editor/src-tauri/src/web_modules/: data_organizer.rs  editor.rs  mod.rs  module_manager.rs  project_settings.rs  resource_depot.rs
ars-editor/src/components/: ProjectWizard.tsx  StatusBar.tsx  Toolbar.tsx  UserMenu.tsx  ViewTabs.tsx
ars-editor/src/hooks/: useKeyboardShortcuts.ts  usePresenceTracker.ts
ars-editor/src/lib/: auth-api.ts  backend.ts  collab-client.ts  data-api.ts  depot-api.ts  settings-api.ts
ars-editor/src/stores/: authStore.ts  collabStore.ts  editorStore.ts  historyMiddleware.ts  memento.ts  projectStore.ts  settingsStore.ts
ars-editor/src/types/: auth.ts  collab.ts  domain.ts  settings.ts
crates/ars-asset-importer/: Cargo.toml
crates/ars-asset-importer/src/: error.rs  hull.rs  lib.rs  obb.rs  pipeline.rs  proxy_writer.rs  schema.rs  simplify.rs  thumbnail.rs
crates/ars-asset-importer/tests/: pipeline_test.rs
crates/ars-codegen/: Cargo.toml
crates/ars-codegen/src/: code_layout.rs  codedesign_parser.rs  feedback.rs  lib.rs  main.rs  project_loader.rs  prompt_generator.rs  session_runner.rs
crates/ars-core/: Cargo.toml
crates/ars-core/src/: error.rs  lib.rs  repository.rs
crates/ars-core/src/models/: auth.rs  mod.rs  project.rs
crates/ars-mcp-server/: Cargo.toml
crates/ars-mcp-server/src/: main.rs  module_parser.rs  project_manager.rs
crates/ars-project/: Cargo.toml
crates/ars-project/src/: lib.rs  local_project.rs  local_session.rs  local_user.rs
crates/ars-secrets/: Cargo.toml
crates/ars-secrets/src/: config.rs  error.rs  lib.rs
data-organizer/: Cargo.toml
data-organizer/src/: lib.rs  web_main.rs  web_server.rs
docs/: build-instance-design.md  native-build-module-design.md  setup-linux-arm64.md  setup-windows.md
infra/: cloudformation.yml  idle-monitor.sh  runner-setup.sh
infra/build-instance/: setup-iam.sh
infra/lambda/: webhook_handler.py
resource-depot/src-tauri/: Cargo.toml
resource-depot/src-tauri/src/: lib.rs  web_main.rs  web_server.rs
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
scripts/: generate-types.sh
spec/: plan.md
spec/modules/: overview.md
spec/review/: 2026-03-30-build-optimization.md
spec/rule/: codedesign-generation-rules.md  foundation-ui-rules.md  project-save-rules.md  test-rules.md
src-tauri/src/: lib.rs
src-tauri/src/models/: app_components.rs  mod.rs
src/types/: app-components.ts  index.ts
tools/ars-mcp-server/: package-lock.json  package.json
(+48 files in other folders)
