[package]
name = "data-organizer"
version = "0.1.0"
edition = "2021"
description = "Data Organizer: Master data & user data management with blackboard architecture"

[features]
default = []
web-server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:dirs",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# Web server (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
dirs = { version = "6", optional = true }

[[bin]]
name = "data-organizer-web"
path = "src/web_main.rs"
required-features = ["web-server"]
