[package]
name = "ars-core"
version = "0.1.0"
edition = "2021"
description = "Ars core domain models and repository traits"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
