[package]
name = "ars-project"
version = "0.1.0"
edition = "2021"
description = "Ars local file-based repository implementations"

[dependencies]
ars-core = { path = "../ars-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
