[package]
name = "resource-depot"
version = "0.1.0"
description = "Ars Resource Depot - リソース管理ツール"
edition = "2021"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-build"]
web-server = [
    "dep:axum",
    "dep:tower-http",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
sha2 = "0.10"
regex = "1"
# Tauri (optional)
tauri = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
# Web server (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[[bin]]
name = "resource-depot-app"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "resource-depot-web"
path = "src/web_main.rs"
required-features = ["web-server"]

[lib]
name = "resource_depot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
